--- a/cellular-automata-2d.cabal
+++ b/cellular-automata-2d.cabal
@@ -3,22 +3,22 @@
 
 name:                cellular-automata-2d
 version:             0.1.0.0
-synopsis:            libary for 2d cellular automata
--- description:         
--- license:             
+synopsis:            library for 2D cellular automata
+-- description:
+-- license:
 license-file:        LICENSE
 author:              Janik Rieß
 maintainer:          j.riess@wtnet.de
--- copyright:           
--- category:            
+-- copyright:
+-- category:
 build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
   exposed-modules:     Voting, Brain, GameOfLife, GUI, CellularAutomata2D, Term, RockPaperScissors, WireWorld, Forest
-  -- other-modules:       
-  -- other-extensions:    
+  -- other-modules:
+  -- other-extensions:
   build-depends:       base >=4.6 && <4.7, SDL >=0.6 && <0.7, SDL-gfx >=0.6 && <0.7, random >=1.0 && <1.1, array >=0.4 && <0.5
-  -- hs-source-dirs:      
+  -- hs-source-dirs:
   default-language:    Haskell2010
