--- a/cellular-automata-2d.cabal
+++ b/cellular-automata-2d.cabal
@@ -16,7 +16,7 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Voting, Brain, GameOfLife, GUI, CellularAutomata2D, Term, RockPaperScissors, WireWorld, Forest
+  exposed-modules:     Voting, Brain, GameOfLife, GUI, CellularAutomata2D, Term, RockPaperScissors, WireWorld, Forest, Files
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.6 && <4.7,
