--- a/cellular-automata-2d.cabal
+++ b/cellular-automata-2d.cabal
@@ -19,9 +19,9 @@ library
   exposed-modules:     Voting, Brain, GameOfLife, GUI, CellularAutomata2D, Term, RockPaperScissors, WireWorld, Forest, Files
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.6 && <4.7,
-                       random >=1.0 && <1.1,
-                       array >=0.4 && <0.5,
+  build-depends:       base,
+                       random,
+                       array,
                        SDL >=0.6 && <0.7, SDL-gfx >=0.6 && <0.7
   -- hs-source-dirs:
   default-language:    Haskell2010
