--- a/cellular-automata-2d.cabal
+++ b/cellular-automata-2d.cabal
@@ -19,9 +19,9 @@ library
   exposed-modules:     Voting, Brain, GameOfLife, GUI, CellularAutomata2D, Term, RockPaperScissors, WireWorld, Forest, Files
   -- other-modules:
   -- other-extensions:
-  build-depends:       base,
-                       random,
-                       array,
+  build-depends:       base >= 4 && < 5,
+                       random >= 1.0,
+                       array >= 0.5,
                        SDL >=0.6 && <0.7, SDL-gfx >=0.6 && <0.7
   -- hs-source-dirs:
   default-language:    Haskell2010
@@ -31,9 +31,9 @@ test-suite tests
    -- default-extensions:
    type: exitcode-stdio-1.0
    main-is: Test.hs
-   build-depends:      base, cellular-automata-2d,
-                       HUnit, QuickCheck >= 2.8,
+   build-depends:      base >= 4 && < 5, cellular-automata-2d == 0.1.0.0,
+                       HUnit >= 1, QuickCheck,
                        random >=1.0 && <1.1,
-                       array >=0.4 && <0.5,
+                       array >=0.3 && <=0.6,
                        SDL >=0.6 && <0.7, SDL-gfx >=0.6 && <0.7
    default-language:    Haskell2010
