--- a/cellular-automata-2d.cabal
+++ b/cellular-automata-2d.cabal
@@ -31,9 +31,10 @@ test-suite tests
    -- default-extensions:
    type: exitcode-stdio-1.0
    main-is: Test.hs
-   build-depends:      base >= 4 && < 5, cellular-automata-2d == 0.1.0.0,
-                       HUnit >= 1, QuickCheck,
-                       random >=1.0 && <1.1,
-                       array >=0.3 && <=0.6,
-                       SDL >=0.6 && <0.7, SDL-gfx >=0.6 && <0.7
+   build-depends:       base >= 4 && < 5,
+                        random >= 1.0,
+                        array >= 0.5,
+                        SDL >=0.6 && <0.7, SDL-gfx >=0.6 && <0.7,
+                        cellular-automata-2d == 0.1.0.0,
+                        HUnit, QuickCheck
    default-language:    Haskell2010
