--- a/cellular-automata-2d.cabal
+++ b/cellular-automata-2d.cabal
@@ -19,10 +19,16 @@ library
   exposed-modules:     Voting, Brain, GameOfLife, GUI, CellularAutomata2D, Term, RockPaperScissors, WireWorld, Forest, Files
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >= 4 && < 5,
-                       random >= 1.0,
-                       array >= 0.5,
-                       SDL >=0.6 && <0.7, SDL-gfx >=0.6 && <0.7
+  build-depends: SDL ==0.6.5.1,
+                 SDL-gfx ==0.6.0.2,
+                 array ==0.5.1.0,
+                 base ==4.8.2.0,
+                 deepseq ==1.4.1.1,
+                 ghc-prim ==0.4.0.0,
+                 integer-gmp ==1.0.0.0,
+                 random ==1.1,
+                 rts ==1.0,
+                 time ==1.5.0.1
   -- hs-source-dirs:
   default-language:    Haskell2010
 
@@ -31,10 +37,22 @@ test-suite tests
    -- default-extensions:
    type: exitcode-stdio-1.0
    main-is: Test.hs
-   build-depends:       base >= 4 && < 5,
-                        random >= 1.0,
-                        array >= 0.5,
-                        SDL >=0.6 && <0.7, SDL-gfx >=0.6 && <0.7,
-                        cellular-automata-2d == 0.1.0.0,
-                        HUnit, QuickCheck
+   build-depends: HUnit ==1.3.0.0,
+                  QuickCheck ==2.8.1,
+                  SDL ==0.6.5.1,
+                  SDL-gfx ==0.6.0.2,
+                  array ==0.5.1.0,
+                  base ==4.8.2.0,
+                  containers ==0.5.6.2,
+                  deepseq ==1.4.1.1,
+                  ghc-prim ==0.4.0.0,
+                  integer-gmp ==1.0.0.0,
+                  pretty ==1.1.2.0,
+                  primitive ==0.6.1.0,
+                  random ==1.1,
+                  rts ==1.0,
+                  template-haskell ==2.10.0.0,
+                  tf-random ==0.5,
+                  time ==1.5.0.1,
+                  transformers ==0.4.2.0
    default-language:    Haskell2010
