--- a/cellular-automata-2d.cabal
+++ b/cellular-automata-2d.cabal
@@ -19,16 +19,12 @@ library
   exposed-modules:     Analysis, OneDim, Voting, Brain, GameOfLife, GUI, CellularAutomata2D, Term, RockPaperScissors, WireWorld, Forest, Files, Cave, Seeds, ToomRule
   -- other-modules:
   -- other-extensions:
-  build-depends: SDL ==0.6.5.1,
-                 SDL-gfx ==0.6.0.2,
-                 array ==0.5.1.0,
-                 base ==4.8.2.0,
-                 deepseq ==1.4.1.1,
-                 ghc-prim ==0.4.0.0,
-                 integer-gmp ==1.0.0.0,
-                 random ==1.1,
-                 rts ==1.0,
-                 time ==1.5.0.1
+  build-depends: SDL,
+                 SDL-gfx <= 0.6.0.2,
+                 array,
+                 base,
+                 random,
+                 time
   -- hs-source-dirs:
   default-language:    Haskell2010
 
@@ -37,38 +33,14 @@ test-suite tests
    -- default-extensions:
    type: exitcode-stdio-1.0
    main-is: Test.hs
-   build-depends: HUnit ==1.3.0.0,
-                  QuickCheck ==2.8.1,
-                  SDL ==0.6.5.1,
-                  SDL-gfx ==0.6.0.2,
-                  ansi-terminal ==0.6.2.3,
-                  ansi-wl-pprint ==0.6.7.3,
-                  array ==0.5.1.0,
-                  base ==4.8.2.0,
-                  binary ==0.7.5.0,
-                  bytestring ==0.10.6.0,
-                  containers ==0.5.6.2,
-                  deepseq ==1.4.1.1,
-                  extensible-exceptions ==0.1.1.4,
-                  ghc-prim ==0.4.0.0,
-                  hostname ==1.0,
-                  integer-gmp ==1.0.0.0,
-                  mtl ==2.2.1,
-                  old-locale ==1.0.0.7,
-                  pretty ==1.1.2.0,
-                  primitive ==0.6.1.0,
-                  random ==1.1,
-                  regex-base ==0.93.2,
-                  regex-posix ==0.95.2,
-                  rts ==1.0,
-                  template-haskell ==2.10.0.0,
-                  test-framework ==0.8.1.1,
-                  test-framework-hunit ==0.3.0.2,
-                  test-framework-quickcheck2 ==0.3.0.3,
-                  text ==1.2.2.0,
-                  tf-random ==0.5,
-                  time ==1.5.0.1,
-                  transformers ==0.4.2.0,
-                  unix ==2.7.1.0,
-                  xml ==1.3.14
+   build-depends: HUnit,
+                  QuickCheck,
+                  SDL,
+                  SDL-gfx <=0.6.0.2,
+                  array,
+                  base,
+                  random,
+                  test-framework,
+                  test-framework-hunit,
+                  test-framework-quickcheck2
    default-language:    Haskell2010
