--- a/cellular-automata-2d.cabal
+++ b/cellular-automata-2d.cabal
@@ -16,8 +16,9 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Analysis, OneDim, Voting, Brain, GameOfLife, GUI, CellularAutomata2D, Term,
-                       RockPaperScissors, WireWorld, Forest, Files, Cave, Seeds, ToomRule
+  exposed-modules:     Analysis, OneDim, Brain, GameOfLife, GUI, CellularAutomata2D, Term,
+                       RockPaperScissors, WireWorld, Forest, Files, Cave, Seeds, ToomRule,
+                       Anneal, Banks, Majority
   -- other-modules:
   -- other-extensions:
   build-depends: SDL,
